# Loura-Knowledge-Atlas

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  AGENTS.md  CODEX_START_PROMPT.md  README.md  docker-compose.production.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
docs/: 01_PRODUCT_SPEC.md  02_UX_SPEC.md  03_TECHNICAL_ARCHITECTURE.md  04_DATA_MODEL.md  05_API_AND_JOBS.md  06_IMPLEMENTATION_PLAN.md  07_OPEN_SOURCE_DECISIONS.md  08_TEST_AND_EVAL_PLAN.md  09_SEED_ATLAS.md  10_REFERENCES.md  11_CODEX_RUNBOOK.md  BACKUP_RESTORE.md  DECISIONS.md  DEPENDENCIES.md  DEPLOYMENT.md  MILESTONE_1_HANDOFF.md  MILESTONE_2_HANDOFF.md  MILESTONE_3_HANDOFF.md  MILESTONE_4_HANDOFF.md  MILESTONE_5_HANDOFF.md  MILESTONE_6_HANDOFF.md  MILESTONE_7_HANDOFF.md  MILESTONE_8_HANDOFF.md  MILESTONE_9_HANDOFF.md
evals/: grounded-qa.json
scripts/: check-prerequisites.mjs  test-seed-import.ts  validate-atlas.ts
seed/: README.md  atlas.yaml
services/ingest-worker/: Dockerfile  pyproject.toml
services/ingest-worker/src/loura_ingest_worker/: __init__.py  ai_prompts.py  ai_provider.py  ai_schemas.py  config.py  db.py  errors.py  extraction.py  health.py  main.py  mock_clients.py  models.py  parsing.py  pipeline.py  queue.py  segmentation.py  storage.py  url_safety.py
services/ingest-worker/src/loura_ingest_worker/ai/: __init__.py  client.py  extract.py  resolve.py  schemas.py  summarize.py
services/ingest-worker/src/loura_ingest_worker/proposals/: __init__.py  builder.py
services/ingest-worker/tests/: test_ai_extraction.py  test_config.py  test_health.py  test_mock_clients.py  test_parser_fixtures.py  test_proposal_builder.py  test_segmentation.py  test_url_safety.py
services/ingest-worker/tests/fixtures/ai/: extraction-valid-v1.json
supabase/: config.toml  seed.sql
(+177 files in other folders)
